# csv-etl-cli

./: Makefile  README.md  config.yaml  pyproject.toml  run.sh  run_etl.bat.txt
output/acct_open_year=1991/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1992/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1993/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1994/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1995/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1996/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1997/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1998/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=1999/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=2000/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=2001/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  d4ed45082ab54427a511c279467a6496-0.parquet
output/acct_open_year=2002/: b1849125e3ae42f785ed8cc45d5ff1b6-0.parquet  (+1 more)
tests/: test_processor.py
(+40 files in other folders)
